--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 plugins {
     id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id "com.github.spotbugs" version "5.0.12"
     id 'java'
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'checkstyle'
+apply plugin: "com.github.spotbugs"
+apply plugin: 'pmd'
 
 group = 'com.waracle.cakemgr'
 version = '0.0.1-SNAPSHOT'
@@ -15,16 +19,55 @@ repositories {
     mavenCentral()
 }
 
+checkstyle {
+    toolVersion = '10.3.4'
+    ignoreFailures = false
+    configFile = file("${rootDir}/static-code-analysis/checkstyle/checkstyle.xml")
+    checkstyleTest.enabled = false
+}
+
+checkstyleMain {
+    source ='src/main/java'
+}
+
+pmd {
+    toolVersion = '6.7.0'
+    ignoreFailures = false
+}
+
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled false
+        html.enabled true
+    }
+}
+
+tasks.withType(Pmd) {
+    reports {
+        xml.enabled false
+        html.enabled true
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.springfox:springfox-swagger2:2.4.0'
+    implementation 'io.springfox:springfox-swagger-ui:2.4.0'
     implementation 'org.apache.commons:commons-lang3'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'com.google.code.findbugs:annotations:3.0.1'
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
+
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "PASSED", "SKIPPED", "FAILED", "STANDARD_OUT", "STANDARD_ERROR"
+    }
 }
