--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 server.port=8282
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(%logger{0}){blue} %clr(%m){faint}%n
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Enabling H2 Console
+spring.h2.console.enabled=true
+# Custom H2 Console URL
+spring.h2.console.path=/h2
+# Whether to enable trace output.
+spring.h2.console.settings.trace=false 
+# Whether to enable remote access.
+spring.h2.console.settings.web-allow-others=false
+spring.jpa.defer-datasource-initialization=true
