--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.springfox:springfox-swagger2:2.4.0'
     implementation 'io.springfox:springfox-swagger-ui:2.4.0'
-    implementation 'org.apache.commons:commons-lang3'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     compileOnly 'com.google.code.findbugs:annotations:3.0.1'
