--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.h2.console.settings.trace=false
 # Whether to enable remote access.
 spring.h2.console.settings.web-allow-others=false
 spring.jpa.defer-datasource-initialization=true
+spring.thymeleaf.cache=false
