--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ tasks.withType(Pmd) {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.springfox:springfox-swagger2:2.4.0'
     implementation 'io.springfox:springfox-swagger-ui:2.4.0'
